--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ build-backend = "setuptools.build_meta"
 name = "pycvxset"
 version = "1.2.0"
 dependencies = [
-    "numpy >=1.14",
+    "numpy >=2.0",
     "scipy >=1.3.0",
     "pycddlib >=3.0.0",
     "matplotlib >=3.8",
@@ -18,6 +18,7 @@ dependencies = [
     "gurobipy >=11.0.0",
 ]
 # numpy>=1.14 for rcond=None correct defaults from https://stackoverflow.com/a/44678023
+# numpy>=2.0 for numpy.lib.array_utils
 # scipy>=1.3.0 for the reflective-simplex option in linprog()
 # matplotlib>=3.8 for https://github.com/matplotlib/matplotlib/pull/25565
 # cvxpy>=1.5.3 for gurobipy error fix https://github.com/cvxpy/cvxpy/issues/2493
